# rust_no_std_template_windows

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs  print.rs
