[package]
name = "rust_no_std_template_windows"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["winbase", "consoleapi", "handleapi", "processenv", "winnls"] }
wee_alloc = "0.4.5"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
opt-level = "s"        # "z" for other size optimization
panic = "abort"
strip = "symbols"

[unstable]
build-std-features = ["compiler-builtins-mem", "alloc"]
build-std = ["core", "compiler_builtins", "alloc"]

